# pupiltracker

./: test.py
lib/: CMakeLists.txt  PupilTrackerPythonWrapper.cpp  conversion.cpp
lib/pupiltracker-pythonwrapper/: .conversion.h.swp
